# letopisec

./: .gitignore  AGENTS.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: 0000000.cf3d  README.md
docs/: data_block_format.md
letopisec/: .rest_api.py.kate-swp  __main__.py  database.py  fec_envelope.py  model.py  rest_api.py  server.py
nestor/: rest_api.py
tools/: README.md  e2e_test.py  letopisec_ingest.py  serve_smoke_test.py
